--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,10 @@
     <string name="details_contributed_by">Contributed by Sam Mason samjbmason</string>
     <string name="details_add_to_favorite">Add to favorite</string>
 
+    <string name="favorites_title">Favorites</string>
+    <string name="favorites_empty">You’re haven’t favorites yet</string>
+    <string name="favorites_total_amount">TOTAL\nAMOUNT</string>
+
     <string name="lorem_ipsum">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
         egestas. In elit libero, aliquet ut nibh sit amet, consequat tristique massa. Vestibulum rhoncus eget odio et
         pharetra. Pellentesque non facilisis dolor. Fusce blandit lacus dui, ac laoreet nisi lobortis nec. Pellentesque
