--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,11 @@
     <string name="favorites_empty">You’re haven’t favorites yet</string>
     <string name="favorites_total_amount">TOTAL\nAMOUNT</string>
 
+    <string name="history_title">Last seen</string>
+    <string name="history_empty">Your history is empty</string>
+    <string name="history_clear">Clear history</string>
+    <string name="history_remove">Remove from history</string>
+
     <string name="lorem_ipsum">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
         egestas. In elit libero, aliquet ut nibh sit amet, consequat tristique massa. Vestibulum rhoncus eget odio et
         pharetra. Pellentesque non facilisis dolor. Fusce blandit lacus dui, ac laoreet nisi lobortis nec. Pellentesque
