--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Punk Application</string>
     <string name="home_title">Home</string>
-    <string name="home_flavors">Flavors</string>
+    <string name="home_flavors">All flavors</string>
     <string name="favorite_added">This drink was added to favorites</string>
 
     <string name="details_description">Description</string>
