* Renamed font styles * Updated drink list item (Now drink images are visible in dark theme) * Implemented ui in Details Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
         a mollis et, sollicitudin quis tellus. Integer dui nulla, luctus condimentum bibendum vel, malesuada at libero.
         Aliquam ipsum orci, bibendum quis placerat et, volutpat quis est. Aenean egestas molestie ipsum a euismod.
     </string>
+    <string name="details_drink_image">Drink image</string>
 </resources>
